# FakeItEasy

./: .gitignore  cover.ps1  create-release-branch.cmd  create-release-branch.csx  mkdocs.yml  packages.config  pyproject.toml  rakefile.netstd.rb  rakefile.rb  release.csx  requirements.txt
.github/workflows/: ci.yml
docs/: advanced-usage.md  argument-constraints.md  capturing-arguments.md  how-to-build.md
profiles/: full.props  net462.props  net6.0.props  net8.0.props  netstandard2.0.props  netstandard2.1.props
recipes/FakeItEasy.Recipes.CSharp/: CapturingArguments.cs  FakeItEasy.Recipes.CSharp.csproj
src/: CommonAssemblyInfo.cs
src/FakeItEasy/: A.cs  A.of.T.cs  An.of.T.cs  ArgumentCollectionExtensions.cs  ArgumentThat.cs  Captured.of.T.cs  Captured.of.TArgument.TCapture.cs  CapturedArgument.cs  CapturedArgument.of.T.cs  CapturedArgument.of.TArg.TCap.cs  CompletedFakeObjectCallExtensions.cs  Fake.cs  FakeItEasy.csproj  ICapturableArgumentConstraintManager.cs  ICapturingArgumentConstraintManager.cs  MethodInfoExtensions.cs  ValueTaskAsyncReturnValueConfigurationExtensions.StronglyTyped.cs  ValueTaskAsyncReturnValueConfigurationExtensions.StronglyTyped.tt  ValueTaskAsyncReturnValueConfigurationExtensions.cs  ValueTaskReturnValueConfigurationExtensions.StronglyTyped.cs  ValueTaskReturnValueConfigurationExtensions.StronglyTyped.tt  ValueTaskReturnValueConfigurationExtensions.cs
src/FakeItEasy.Extensions.ValueTask/: FakeItEasy.Extensions.ValueTask.csproj
tests/FakeItEasy.IntegrationTests.VB/: FakeItEasy.IntegrationTests.VB.vbproj
(+29 files in other folders)
